--- a/templates/tinla/build_document/base.html
+++ b/templates/tinla/build_document/base.html
@@ -10,7 +10,7 @@
             <a class="{% if '/create-questionnaire/' in request.path %}build-hupt{% else %}build-hupt1{% endif %}" href="/build-document/create-questionnaire/">Create Questionnaire</a>
         </td>
         <td>
-            <a class="build-hupt1" href="YOUR-URL">Finalize Template</a>
+            <a class="{% if '/finalize-template/' in request.path %}build-hupt{% else %}build-hupt1{% endif %}" href="/build-document/finalize-template/">Finalize Template</a>
         </td>
     </tr>
 </table>
