--- a/templates/tinla/web/base.html
+++ b/templates/tinla/web/base.html
@@ -94,7 +94,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <a class="hupt" href="/build-document/upload-template/">Build Document</a>
+                        <a class="hupt" href="/build-document/">Build Document</a>
                     </td>
                 </tr>
 <!--                <tr>
