--- a/media/riba/css/jq/jquery-ui-1.8.2.custom.css
+++ b/media/riba/css/jq/jquery-ui-1.8.2.custom.css
@@ -52,7 +52,7 @@
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { /*font-size: 1em; */}
 .ui-widget-content { background: #CDCDCD; color: #333333; }
 .ui-widget-content a { color: #333333; }
-.ui-widget-header { border: 1px solid #ffce00; color: #ffffff; font-weight: bold; }
+.ui-widget-header { border: 1px solid #A10326; color: #ffffff; font-weight: bold; }
 .ui-widget-header a { color: #ffffff; }
 
 /* Interaction states
@@ -386,8 +386,8 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 /* Dialog
 ----------------------------------*/
 .ui-dialog { position: absolute; padding: 0; width: 300px; overflow: hidden; box-shadow: 0px 0px 50px 10px #666;-moz-box-shadow: 0px 0px 50px 10px #666;-webkit-box-shadow: 0px 0px 50px 10px #666; border-radius:5px;-webkit-border-radius:5px;-moz-border-radius:5px;}
-.ui-dialog .ui-dialog-titlebar { padding: 5px 10px; position: relative; background-color: #ffce00; border-top-left-radius:5px;border-top-right-radius:5px;-webkit-border-top-left-radius:5px;-webkit-border-top-right-radius:5px;-moz-border-radius-topleft:5px;-moz-border-radius-topright:5px;}
-.ui-dialog .ui-dialog-title { float: left; margin:0px; color:#333; } 
+.ui-dialog .ui-dialog-titlebar { padding: 5px 10px; position: relative; background-color: #A10326; border-top-left-radius:5px;border-top-right-radius:5px;-webkit-border-top-left-radius:5px;-webkit-border-top-right-radius:5px;-moz-border-radius-topleft:5px;-moz-border-radius-topright:5px;}
+.ui-dialog .ui-dialog-title { float: left; margin:0px; color:white; } 
 .ui-dialog .ui-dialog-titlebar-close { position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 1px; height: 18px; }
 .ui-dialog .ui-dialog-titlebar-close span { display: block; margin: 1px; }
 .ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus { padding: 0; }
