--- a/templates/riba/riba-admin/question/add_question.html
+++ b/templates/riba/riba-admin/question/add_question.html
@@ -1,89 +1,19 @@
-{% extends 'web/base.html' %}
+{% extends 'riba-admin/base.html' %}
 {% load question_tags %}
+
+{% block breadcrumbs %}
+    <!-- Breadcrumbs -->
+    <div class="breadcrumbs">
+        <a href="/admin/">Home</a>&nbsp;&raquo;&nbsp; <a href="/admin/question/view/">Questions</a>&nbsp;&raquo;&nbsp; Add
+    </div>
+    <!-- END Breadcrumbs -->
+{% endblock %}
+
+
 {%block content%}
-<style>
-    .question_details_container {
-        width: 100%;
-    }
-    .question_details {
-        padding: 10px 15px;
-    }
-    .h20 {height:20px;}
-	#id_lists-description {width:238px;height:14px; font-size:12px;}
-	#id_lists-type, #id_lists-banner_type, #id_lists-banner_type{width:250px; font-size:12px;}
-	.details{width:460px;}
-	.details input {height:auto;width: 242px; font-size:12px;}
-	.seller-rate-chart input {height:auto;width: 242px; font-size:12px;}
-	.seller-dropdown select {height:auto;width: 250px; font-size:12px;}
-	.details textarea{height:75px;width: 300px; font-size:12px;}
-	.list-item ul li textarea {width:250px; font-size:12px;}
-	.list-item ul li select {width:250px; font-size:12px;}
-	#id_lists-sort_order{width:242px}
-	#id_lists-banner_image{width:250px;}
-	#id_lists-starts_on, #id_lists-ends_on{width:80px; height:17px;}
-	#starts_on_hour, #starts_on_minute, #starts_on_ap, #ends_on_hour, #ends_on_minute, #ends_on_ap {width:49px; font-size:11px;padding: 3px 2px 3px 0;}
-	.list-item-title{padding:3px 5px;}
-    .divider-top {
-        border-top: 1px solid white;
-    }
-    .details {
-        width: 460px;
-    }
-	a:hover {
-		color: #009;
-		text-decoration: underline !important;
-	}
-	.arrow-right {
-		background-position: right center;
-		background-position-x: 100%;
-		background-position-y: 50%;
-		padding: 0px 15px;
-		padding-top: 0px;
-		padding-right: 15px;
-		padding-bottom: 0px;
-		padding-left: 15px;
-	}
-	.toggle-down-arrow {
-		background: url("/media/images/closed.gif") no-repeat scroll left center transparent;
-		padding: 0.5em 0.5em 0.5em 15px;
-	}
-	.toggle-up-arrow {
-		background: url("/media/images/opened.gif") no-repeat scroll left center transparent;
-		padding: 0.5em 0.5em 0.5em 15px;
-	}
-	.border-dotted-gray {
-		border-bottom: 1px dotted #ECECEC;
-		border-bottom-width: 1px;
-		border-bottom-style: dotted;
-		border-bottom-color: #ECECEC;
-	}
-	.btn_c {
-		border-radius: 3px 3px 3px 3px;
-		border-style: solid;
-		border-width: 1px;
-		color: black !important;
-		display: inline-block;
-		outline: 0 none;
-		padding: 5px 10px;
-		text-decoration: none;
-	}
-    .dynamic-option-form select {
-        width: 200px;
-    }
-    #id_answer_type, #id_type, #id_rows, #id_columns {
-        width: 150px;
-    }
-</style>
 	
-<div class="padding_top10">
-	<div class="breadcrumb"><a href="/question/view/">View All Questions</a>&nbsp;&raquo;&nbsp; Add New Question</div>
-		<div class="content_head mar0">
-			<div class="header rc5">
-				<h1>Add New Question</h1>
-			</div>
-			<div class="clear bordergray"></div>
-		</div>
-	</div>
+<div class="question-details">
+    <h1>Add Question</h1>
     {% if errors %}
     <div class="error">
         {% for error in errors %}
@@ -93,110 +23,121 @@
     {% endif %}
 	<div class="inner-content">
 		<form action="" id="add_form" name="add_form" method="POST" enctype="multipart/form-data">
-			<div class="question_details_container"><!-- div web module details container -->
-				<div style="background-color:#f9f9f9"><!-- div gray background -->
-					<div class="question_details"> <!-- div web_module_details -->
-						<div class="separator-bottom f18 fb fdgray">Question Details</div>
-						<div class="divider-top"><!-- div divider top -->
-							<div class="mart20"> <!-- div main -->
-								<div class="details left"><!-- div left part -->
-									<div class="left f11 w110 marb5">{{ form.question.label }}<span class="red">*</span></div>
-									<div class="left w350 marb5">{{ form.question }}</div>
-								</div><!-- /div left part -->
-								<div class="details left"><!-- div right part -->
-									<div class="marl100 left f11 w110 marb5">{{ form.answer_type.label }}<span class="red">*</span></div>
-									<div class="left w250 marb5">{{ form.answer_type }}</div>
-									<div class="marl100 left f11 w110 marb5">{{ form.type.label }}</div>
-									<div class="left w250 marb5">{{ form.type }}</div>
-                                    <div class="marl100 left f11 w110 marb5 text-area hide">{{ form.rows.label }}</div>
-									<div class="left w250 marb5 text-area hide">{{ form.rows }}</div>
-                                    <div class="marl100 left f11 w110 marb5 text-area hide">{{ form.columns.label }}</div>
-									<div class="left w250 marb5 text-area hide">{{ form.columns }}</div>
-								</div><!-- /div right part -->
-								<div class="clear"></div>
-							</div><!-- /div main -->
-						</div><!-- /div divider top -->
-						<div class="clear">&nbsp;</div>
-					</div><!-- /div web_module_details -->
-				</div><!-- /div gray background -->
-                <div class="clear">&nbsp;</div>
+			<div id="question_details_container"><!-- div web module details container -->
+                <fieldset class="module aligned">
+                    <div class="form-row question">
+                        <div>
+                            <label class="required">{{form.question.label}}:</label>
+                            {{form.question}}
+                        </div>
+                    </div>
+                    <div class="form-row answer_type">
+                        <div>
+                            <label class="required">{{form.answer_type.label}}:</label>
+                            {{form.answer_type}}
+                        </div>
+                    </div>
+                    <div class="form-row type">
+                        <div>
+                            <label>{{form.type.label}}:</label>
+                            {{form.type}}
+                        </div>
+                    </div>
+                    <div class="form-row rows text-area hide">
+                        <div>
+                            <label>{{form.rows.label}}:</label>
+                            {{form.rows}}
+                        </div>
+                    </div>
+                    <div class="form-row columns text-area hide">
+                        <div>
+                            <label>{{form.columns.label}}:</label>
+                            {{form.columns}}
+                        </div>
+                    </div>
+                </fieldset>
 
 				<!--************ FIELD FORM **************-->
-				<div id="item_wrapper f11" class="marl10"><!-- div item wrapper -->
-                	<a class="toggle-down-arrow arrow-right item_link" id="field_options" title="Click here to add fields" href="#">Fields</a>
-                </div><!-- /div item wrapper -->
-				<div id="field_options_div" class="hide clear"> <!-- div option_details -->
-					<div class="divider-top"><!-- div divider top -->
-						<div class="mart5"> <!-- option form div-->
-							{{field_formset.management_form}}
-							{% for i in field_formset.forms %}
-								<div class="dynamic-field-form">
-									{% if i %}
-										<div class="padb5 padt5 marb5 left" style="background-color:#fefefe; width:100%"><!-- div list part -->
-											<div class="left flgray f11 w75 marl10 ">{{ i.field_label.label }}</div>
-											<div class="left w200">{{ i.field_label }}</div>
-											<div class="left flgray f11 w75 marl10 ra">{{ i.field_type.label }}</div>
-                                            <div class="left w100 ra">{{ i.field_type }}</div>
-                                            <div class="left flgray f11 w100 marl10 ca">{{ i.field_option.label }}</div>
-                                            <div class="left w150 ra">{{ i.field_option }}</div>
-                                            <div class="left marl10 ra w100">{{i.DELETE}} Delete<!--<a class="delete-field-form" href="#">Delete</a>--> </div>
-										</div><!-- /div list part -->
-										<div class="clear"></div>
-									{% endif %}
-								</div>
-							{% endfor %}
-						</div><!-- /div option form -->
-						<div class="left">
-							<input title='Add new field' type='button' name='addfield' id='add_another_field' value='+ Add Field' class="btn_c btn_c_s" />
-						</div>
-						<div class="clear or_hr marb10">&nbsp;</div>
+                <div class="module-inline-group" id="question-fields">
+                    <div class="tabular inline-related last-related">
+                        <fieldset class="inline-module">
+                            <h2>Fields</h2>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Field label</th>
+                                        <th class="required">Field type</th>
+                                        <th>Field Option</th>
+                                        <th>Delete?</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {{field_formset.management_form}}
+                                    {% for f in field_formset.forms %}
+                                        <tr class="dynamic-field-form">
+                                            {% if f %}
+                                                <td class="field-label">{{f.field_label}}</td>
+                                                <td class="field-type">{{f.field_type}}</td>
+                                                <td class="field-option">{{f.field_option}}</td>
+                                                <td>{{f.DELETE}}</td>
+                                            {% endif %}
+                                        </tr>
+                                    {% endfor %}
+                                        <tr class="add-row">
+                                            <td colspan="4">
+                                               <strong><a id="add_another_field" href="javascript:void(0)">Add another field</a></strong>
+                                            </td>
+                                        </tr>
+                                </tbody>
+                            </table>
+                        </fieldset>
+                    </div>
+                </div>
+				<!-- ********** END FIELD FORM **************** -->
 
-					</div><!-- /div divider top -->
-				</div><!-- /div option_details -->
-				<!-- ********** FIELD OPTIONS FORM **************** -->
-				<div class="clear border-dotted-gray"></div>
 				<!--************ OPTIONS FORM **************-->
-				<div id="item_wrapper f11" class="marl10"><!-- div item wrapper -->
-                	<a class="toggle-down-arrow arrow-right item_link" id="add_options" title="Click here to add options" href="#">Options</a>
-                </div><!-- /div item wrapper -->
-				<div id="add_options_div" class="hide clear"> <!-- div option_details -->
-					<div class="divider-top"><!-- div divider top -->
-						<div> <!-- option form div-->
-							{{option_formset.management_form}}
-							{% for i in option_formset.forms %}
-								<div class="dynamic-option-form">
-									{% if i %}
-										<div class="padb5 padt5 marb5 left" style="background-color:#fefefe; width:100%"><!-- div list part -->
-											<div class="left flgray f11 w110 marl10 ">{{ i.option_value.label }}</div>
-											<div class="left w250">{{ i.option_value }}</div>
-                                            <div class="left flgray f11 w110 marl10 ca">{{ i.dependent_question.label }}</div>
-                                            <div class="left w250">{{ i.dependent_question }}
-                                            <a href="/question/add/{{random_count}}{{forloop.counter0}}" class="add-another" name="{{i.dependent_question.html_name}}~{{random_count}}{{forloop.counter0}}" id="add_id_{{i.dependent_question.html_name}}~{{random_count}}{{forloop.counter0}}" onclick="return showAddAnotherPopup(this);">
-                                                <img src="/media/images/icon_addlink.gif" width="10" height="10" alt="Add Another"/>
-                                            </a>
-                                            </div>
-                                            <div class="left marl10 ra w100">{{i.DELETE}} Delete<!--<a class="delete-field-form" href="#">Delete</a>--> </div>
-                                            <!--<div class="add_dependent_question"></div>-->
-										</div><!-- /div list part -->
-										<div class="clear"></div>
-									{% endif %}
-								</div>
-							{% endfor %}
-						</div><!-- /div option form -->
-						<div class="left">
-                            
-							<input title='Add new option' type='button' name='addoption' id='add_another_option' value='+ Add Option' class="btn_c btn_c_s" />
-						</div>
-						<div class="clear or_hr marb10">&nbsp;</div>
-					</div><!-- /div divider top -->
-				</div><!-- /div option_details -->
+                <div class="module-inline-group" id="question-options">
+                    <div class="tabular inline-related last-related">
+                        <fieldset class="inline-module">
+                            <h2>Options</h2>
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Option Value</th>
+                                        <th>Dependent Question</th>
+                                        <th>Delete?</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {{option_formset.management_form}}
+                                    {% for o in option_formset.forms %}
+                                        <tr class="dynamic-option-form">
+                                            {% if o %}
+                                                <td class="option-value">{{o.option_value}}</td>
+                                                <td class="dependent-question">{{o.dependent_question}}
+                                                    <a href="/admin/question/add/{{random_count}}{{forloop.counter0}}" class="add-another" name="{{o.dependent_question.html_name}}~{{random_count}}{{forloop.counter0}}" id="add_id_{{o.dependent_question.html_name}}~{{random_count}}{{forloop.counter0}}" onclick="return showAddAnotherPopup(this);">
+                                                        <img src="/media/images/icon_addlink.gif" width="10" height="10" alt="Add Another"/>
+                                                    </a>
+                                                </td>
+                                                <td>{{o.DELETE}}</td>
+                                            {% endif %}
+                                        </tr>
+                                    {% endfor %}
+                                        <tr class="add-row">
+                                            <td colspan="4">
+                                               <strong><a id="add_another_option" href="javascript:void(0)">Add another option</a></strong>
+                                            </td>
+                                        </tr>
+                                </tbody>
+                            </table>
+                        </fieldset>
+                    </div>
+                </div>
 				<!-- ********** END OPTIONS FORM **************** -->
-
-			<div class="clear">&nbsp;</div>
-			<div class="right">
-                <input type="hidden" id="is_popup" name="is_popup" value={{is_popup}} />
-				<INPUT TYPE="submit" id="save" VALUE="Save" class="btn_c btn_c_s btn_orange" name="save" />
-			</div>
+                <div class="submit-row">
+                    <input type="hidden" id="is_popup" name="is_popup" value={{is_popup}} />
+                    <input type="submit" id="save" VALUE="Save" class="default" name="save" />
+                </div>
 			</div><!-- /div web_container -->
 		</form>
 	</div>
@@ -218,21 +159,6 @@ $(document).ready(function PreselectMyItem(){
 });
 
 $(document).ready(function(){
-    $('.item_link').toggle(
-        function(){	
-            var e = this.id;
-            var k = e+"_div";
-            $('#'+k).slideDown();
-            $(this).removeClass('toggle-down-arrow');
-            $(this).addClass('toggle-up-arrow');
-        },
-        function(){
-            var e = this.id;
-            $('#'+e+'_div').slideUp();
-            $(this).removeClass('toggle-up-arrow');
-            $(this).addClass('toggle-down-arrow');
-        }
-    );
     $('#id_answer_type').change(function(){
         var e = this.value;
         if (e=="textarea"){
@@ -280,13 +206,13 @@ $(document).ready(function(){
 
     // Event handlers for Field
     $("#add_another_field").click(function() {
-        cloneMore('div.dynamic-field-form:last', 'field_set');
+        cloneMore('tr.dynamic-field-form:last', 'field_set');
     });
 
 
     // Register the click event handlers
     $("#add_another_option").click(function() {
-        cloneMore('div.dynamic-option-form:last', 'option_set');
+        cloneMore('tr.dynamic-option-form:last', 'option_set');
     });
 </script>
 <script type="text/javascript" src="/adminmedia/js/admin/RelatedObjectLookups.js"></script>
