--- a/templates/riba/riba-admin/base.html
+++ b/templates/riba/riba-admin/base.html
@@ -36,6 +36,7 @@
 <link rel="stylesheet" href="{{MEDIA_URL}}css/riba-admin/home.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="{{MEDIA_URL}}css/riba-admin/base.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="{{MEDIA_URL}}css/riba-admin/question.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="{{MEDIA_URL}}css/riba-admin/common.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="/adminmedia/css/base.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="/adminmedia/css/forms.css" type="text/css" media="screen, projection" />
 <!--
