--- a/templates/riba/riba-admin/base.html
+++ b/templates/riba/riba-admin/base.html
@@ -39,6 +39,7 @@
 <link rel="stylesheet" href="{{MEDIA_URL}}css/riba-admin/common.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="/adminmedia/css/base.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="/adminmedia/css/forms.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="/adminmedia/css/widgets.css" type="text/css" media="screen, projection" />
 <!--
 <link rel="stylesheet" href="{{MEDIA_URL}}css/menu.css" type="text/css" media="screen, projection" />
 <link rel="stylesheet" href="{{MEDIA_URL}}css/buttons.css" type="text/css" media="screen, projection" />
