--- a/templates/riba/riba-admin/question/question.html
+++ b/templates/riba/riba-admin/question/question.html
@@ -59,7 +59,7 @@
         {% if q.type %}
         <div class="form-row type">
             <div>
-                <label for="id_type" class="required">Type:</label>
+                <label for="id_type">Type:</label>
                 <input type="text" readonly="readonly" id="id_type" value="{{q.type|title}}"/>
             </div>
         </div>
