--- a/media/riba/css/riba-admin/common.css
+++ b/media/riba/css/riba-admin/common.css
@@ -1,5 +1,8 @@
 /* Common css */
 .left {float: left;}
+.w10p {width: 10%;}
+.w20p {width: 20% !important;}
+.w70p {width: 70%;}
 .w85p {width: 85%;}
 .w100p {width: 100%;}
 .shadow_one{box-shadow:0 0 5px #666;-moz-box-shadow:0 0 5px #666;-webkit-box-shadow:0 0 5px #666}
@@ -86,7 +89,7 @@ div.errors h3{margin-bottom:5px}
 .error {padding:5px 10px; margin:0px; border:1px solid #ddd;}
 .error {background:#FFDDDD;color:#8a1f11;border-color:#E25F53;}
 
-.b1s {border: 1px solid #CCC;}
+.b1ps {border: 1px solid #CCC;}
 
 .w400 {width: 400px !important;}
 .w300 {width: 300px !important;}
