Fixed width of continue button on preview page. Removed bottom border from category delete page.

--- a/templates/riba/riba-admin/categories/category_delete_confirm.html
+++ b/templates/riba/riba-admin/categories/category_delete_confirm.html
@@ -6,6 +6,7 @@
 		}
 		th, td, caption{
 			padding: 4px 10px 4px 5px;
+            border-bottom: 0px;
 		}
 	</style>
 	<form action="/categories/delete/{{category.id}}/" id="del_confirm" name="del_confirm" method="POST" enctype="multipart/form-data">
