--- a/templates/riba/riba-admin/question/preview_question.html
+++ b/templates/riba/riba-admin/question/preview_question.html
@@ -153,7 +153,7 @@
                 {% else %}
 	                <div class="marl10">
                         <input type="hidden" id="id_{{q.id}}" value="{{q.id}}" name="current_question_id"></input>
-                        <input type="submit" id="continue" value="Continue" name="continue"></input>
+                        <input class="w100" type="submit" id="continue" value="Continue" name="continue"></input>
                     </div>
                 {% endif %}
             </div>
