--- a/templates/riba/riba-admin/home.html
+++ b/templates/riba/riba-admin/home.html
@@ -10,17 +10,6 @@
                 <tbody>
                     <tr>
                         <th scope="row">
-                            <a href="question/view/">Questions</a>
-                        </th>
-                        <td>
-                            <a href="question/add/" class="addlink">Add</a>
-                        </td>
-                        <td>
-                            <a href="question/view/" class="changelink">Change</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row">
                             <a href="categories/view/">Categories</a>
                         </th>
                         <td>
@@ -32,13 +21,24 @@
                     </tr>
                     <tr>
                         <th scope="row">
-                            <a href="build-document/">Build Document</a>
+                            <a href="question/view/">Questions</a>
                         </th>
                         <td>
-                            <a href="build-document/upload-template/" class="addlink">Add</a>
+                            <a href="question/add/" class="addlink">Add</a>
                         </td>
                         <td>
-                            <a href="build-document/" class="changelink">Change</a>
+                            <a href="question/view/" class="changelink">Change</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">
+                            <a href="document/">Documents</a>
+                        </th>
+                        <td>
+                            <a href="document/upload-template/" class="addlink">Add</a>
+                        </td>
+                        <td>
+                            <a href="document/" class="changelink">Change</a>
                         </td>
                     </tr>
                 </tbody>
