--- a/media/riba/css/riba-admin/common.css
+++ b/media/riba/css/riba-admin/common.css
@@ -27,7 +27,9 @@
 .margin-b5{margin-top:5px}
 .margin-t15{margin-top:20px}
 .marr15{margin-right:15px}
+.marr5{margin-right:5px}
 .marl10{margin-left:10px}
+.marl5{margin-left:5px}
 .marb10{margin-bottom:10px}
 .mart10{margin-top:10px}
 .mart5{margin-top:5px}
@@ -93,6 +95,9 @@ div.errors h3{margin-bottom:5px}
 
 .w400 {width: 400px !important;}
 .w300 {width: 300px !important;}
+.w150 {width: 150px !important;}
 .w100 {width: 100px !important;}
 .w10 {width: 10px !important;}
+
+.martlr10 {margin: 10px 10px 0px 10px;}
 /* End Common css */
