Modified admin interface for document

--- a/media/riba/css/riba-admin/common.css
+++ b/media/riba/css/riba-admin/common.css
@@ -100,4 +100,6 @@ div.errors h3{margin-bottom:5px}
 .w10 {width: 10px !important;}
 
 .martlr10 {margin: 10px 10px 0px 10px;}
+
+.cp {cursor: pointer;}
 /* End Common css */
